--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="utf-8" />
     <meta http-equiv="pragma" content="no-cache" />
     <meta name="viewport" content="width=device-width" />
-    <title>Pocket Kitten</title>
+    <title>Pocket Kitten2</title>
     <link rel="stylesheet" type="text/css" href="style/pocket-kitten.css"/>
     <script defer type="application/javascript" src="js/pocket-kitten.js"></script>
   </head>
   <body role="application">
     <section role="region">
       <header aria-level="1">
-        <h1>Pocket Kitten</h1>
-        <button id="btnInstall">Installarama</button>
+        <h1>Pocket Firefox PaperToys</h1>
+        <!--button id="btnInstall">Installarama</button-->
       </header>
       <figure class="show-kitten">
         <div>
-          <p id="loader">Luring a new kitten…</p>
-          <img id="kitten-image" src="style/images/fetching.gif" alt="A picture of a kitten" />
+          <p id="loader">Retrieving …</p>
+          <img id="kitten-image" src="style/images/fetching.gif" alt="A picture from Flickr" />
           <span></span>
         </div>
-        <figcaption>Tap to see a new little kitty</figcaption>
+        <figcaption>Tap to see a new one</figcaption>
       </figure>
     </section>
-    <a href="https://github.com/Rumyra/Pocket-Kitten" class="github-ribbon">View code on Github</a>
+    <a href="https://github.com/juaneladio/Pocket-Kitten" class="github-ribbon">View code on Github</a>
   </body>
 </html>
