Small fix in image's width and height

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Pocket Kitten2</title>
     <link rel="stylesheet" type="text/css" href="style/pocket-kitten.css"/>
     <script defer type="application/javascript" src="js/pocket-kitten.js"></script>
+    <script defer type="application/javascript" src="https://secure.flickr.com/services/feeds/photos_public.gne?id=98243897@N02&tags=pocketflickr&lang=es&format=json"></script>
   </head>
   <body role="application">
     <section role="region">
@@ -17,7 +18,7 @@
       <figure class="show-kitten">
         <div>
           <p id="loader">Retrieving …</p>
-          <img id="kitten-image" src="style/images/fetching.gif" alt="A picture from Flickr" />
+          <img id="kitten-image" src="style/images/fetching.gif" alt="A picture from Flickr" width="300" height="200" />
           <span></span>
         </div>
         <figcaption>Tap to see a new one</figcaption>
