--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="pragma" content="no-cache" />
     <meta name="viewport" content="width=device-width" />
     <title>Pocket Kitten2</title>
+    <link rel="stylesheet" type="text/css" href="style/fonts.css"/>
     <link rel="stylesheet" type="text/css" href="style/pocket-kitten.css"/>
     <script defer type="application/javascript" src="js/pocket-kitten.js"></script>
     <script defer type="application/javascript" src="https://secure.flickr.com/services/feeds/photos_public.gne?id=98243897@N02&tags=pocketflickr&lang=es&format=json"></script>
@@ -21,7 +22,7 @@
           <img id="kitten-image" src="style/images/fetching.gif" alt="A picture from Flickr" width="300" height="200" />
           <span></span>
         </div>
-        <figcaption>Tap to see a new one</figcaption>
+        <figcaption>Tap to see a new one :D</figcaption>
       </figure>
     </section>
     <a href="https://github.com/juaneladio/Pocket-Kitten" class="github-ribbon">View code on Github</a>
