New image while retrieving images from Flickr

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <figure class="show-kitten">
         <div>
           <p id="loader">Retrieving …</p>
-          <img id="kitten-image" src="style/images/fetching.gif" alt="A picture from Flickr" width="300" height="200" />
+          <img id="kitten-image" src="style/images/fetching.png" alt="A picture from Flickr" width="300" height="200" />
           <span></span>
         </div>
         <figcaption>Tap to see a new one :D</figcaption>
