Added external link (new window)

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
         <figcaption>Tap to see a new one :D</figcaption>
       </figure>
     </section>
-    <a href="https://github.com/juaneladio/Pocket-Kitten" class="github-ribbon">View code on Github</a>
+    <a href="https://github.com/juaneladio/Pocket-Kitten" class="github-ribbon" target=”_blank”>View code on Github</a>
   </body>
 </html>
